# pocket_b100

./: .dockerignore  .env.example  Dockerfile  README.md  api.py  docker-compose.yml  flow.py  howtorun.md  main.py  nodes.py  package-lock.json  pyproject.toml  requirements.txt
docs/: design.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  DocumentCard.tsx  DocumentSidebar.tsx
frontend/src/pages/: Index.tsx
nginx/: nginx.conf
utils/: call_llm.py  memory.py  vectordb.py
